package eus.ehu.cinemaProject.domain;

import java.util.List;

public class Film {
    private String title;
    private String director;
    private int duration;
    private String description;
    private List<Genre> genre;
    private List<Review> reviews;
}
