package eus.ehu.cinemaProject.domain;

public enum Food {
    SMALL_POPCORN,
    MEDIUM_POPCORN,
    LARGE_POPCORN,
    SMALL_SODA,
    MEDIUM_SODA,
    LARGE_SODA,
    NACHOS,
    CANDY;
}
