package eus.ehu.cinemaProject.domain;

public enum Genre {
    ACTION,
    ADVENTURE,
    ANIMATED,
    COMEDY,
    DRAMA,
    FANTASY,
    HISTORICAL,
    HORROR,
    MUSICAL,
    ROMANCE,
    SCIENCE_FICTION,
    THRILLER,
    WESTERN;
}
