package eus.ehu.cinemaProject.domain;

public enum SeatType {
    NORMAL,
    COMFORTABLE,
    PREMIUM,
    OCCUPIED;
}
