package eus.ehu.cinemaProject.domain.users;

public class Worker extends User {
    private int Salary;
}
