package eus.ehu.cinemaproject.domain;

public class Quantity {
    private int quantity;
}
